# cppversus

./: .gitignore  Hydra Documentation.html  README.md  build.sh  gen_docs.sh  meson.build  meson_options.txt  run_benchmarks.sh  run_tests.sh
benchmarks/: meson.build
benchmarks/dokken/: meson.build
benchmarks/dokken/init/: init_benchmark.cpp  meson.build
docs/: Doxyfile.in  meson.build
include/: CPPVersus.hpp  Characters.hpp  DokkenAPI.hpp  JSONValidation.hpp  MinimalPlayerInfo.hpp  PlayerInfo.hpp  cppversus.hpp
include/Data/: Characters.hpp  PlayerInfo.hpp
include/Dokken/: DokkenAPI.hpp
include/JSON/: JSONUtils.hpp  JSONValidation.hpp
samples/: sample_account_data.json  sample_current_matches_data.json  sample_match_data.json  sample_match_data_2.json  sample_object_types.json  sample_profile_data.json  sample_profile_from_username_data.json  sample_profiles_from_username.json  sample_search_queries.json
src/: cppversus.cpp  dokken_api.cpp  meson.build
src/cli/: main.cpp  meson.build
src/common/: json_validation.cpp  meson.build  player_info.cpp
src/common/json/: json_utils.cpp  json_validation.cpp
src/dokken/: main.cpp  meson.build  player_info.cpp
subprojects/spdlog-1.14.1/: .meson-subproject-wrap-hash.txt
tests/: meson.build
tests/api_init/: api_init_test.cpp  meson.build
tests/dokken/: meson.build
tests/dokken/get_user/: get_user_test.cpp  meson.build
tests/dokken/info/: meson.build
tests/dokken/info/id/fail/: id_fail.cpp  meson.build
tests/dokken/info/id/success/: id_success.cpp  meson.build
tests/dokken/info/username/: meson.build
tests/dokken/info/username/fail/: meson.build  username_fail.cpp
tests/dokken/info/username/success/: meson.build  username_success.cpp
tests/dokken/init/fail/: init_fail.cpp  meson.build
tests/dokken/init/success/: init_success.cpp  meson.build
tests/infoByID/fail/: info_by_id_fail_test.cpp  meson.build
tests/infoByID/success/: info_by_id_success_test.cpp  meson.build
tests/infoByUsername/fail/: info_by_username_fail_test.cpp  meson.build
tests/init/: meson.build
tests/init/api_init/: api_init_test.cpp
tests/init/api_init_fail/: api_init_fail_test.cpp  meson.build
