option('enable-tests',
  type : 'boolean',
  value : true,
  description : 'Enables tests.'
)

option('enable-benchmarks',
  type : 'boolean',
  value : false,
  description : 'Enables benchmarks.'
)

option('enable-docs',
  type : 'boolean',
  value : true,
  description : 'Enables generating documentation using doxygen.'
)